 $Id: ChangeLog,v 1.77 2004/11/11 11:36:51 uehira Exp $

2004-11-11 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* relaym : multi destination verson of 'relay'. IPv4 & IPv6 support.
	* Version 1.1.46 released.
	
2004-10-27 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* raw_mon : added daemon mode (raw_mond)
	
2004-10-26 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* recvt : added option -D : daemon mode (recvtd)
	* relay : added option -D : daemon mode (relayd)
	* send_raw : added option -D : daemon mode (send_rawd, ...)
	* Version 1.1.45 released.
	
2004-10-21 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* order : added option -D : daemon mode (orderd)
	* wdiskd   : Daemon mode of wdisk
	* wdisk60d : Daemon mode of wdisk60
	* Version 1.1.44 released.
	
2004-10-20 Tsuruoka Hiroshi <tsuru@eri.u-tokyo.ac.jp>
	* add program of winsimu
	* Version 1.1.43 released.
	
2004-10-14 Tsuruoka Hiroshi <tsuru@eri.u-tokyo.ac.jp>
	* wintowin: writing to shared memory option
	* shmdump: XINETD compile option
	
2004-10-04 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* wdisk : added option -D : Daemon mode
	* Version 1.1.42 released.
	
2004-09-13 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* win2raw : bug fixed.
	* Version 1.1.41 released.
	
2004-09-09 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* relay : fixed a bug in -s option ("sinterface")
	* Version 1.1.40 released.
	
2004-09-08 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* win : allow initial depth  down to -3 km
	* Version 1.1.39 released.
	
2004-09-07 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* wdisk : added option -s : Freespace mode
	* Version 1.1.38 released.
	
2004-09-05 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* stopped restriction of N of chs for selection
	* Version 1.1.37 released.

2004-08-30 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* order2 : remove
	* Version 1.1.36 released.
	
2004-08-29 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* man/winformat.1, man/win.1 : fixed gtbl error

2004-08-10 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>