@@ -1,5 +1,8 @@
- $Id: ChangeLog,v 1.77 2004/11/11 11:36:51 uehira Exp $
+ $Id: ChangeLog,v 1.78 2004/11/13 05:49:37 uehira Exp $
 
+2004-11-13 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
+	* relaym : MacOSX need #include <sys/time.h>
+	
 2004-11-11 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* relaym : multi destination verson of 'relay'. IPv4 & IPv6 support.
 	* Version 1.1.46 released.
